# clipboard

./: Cargo.toml  README.md  rust-toolchain.toml
src/: history.rs  icon.rs  main.rs  style.rs  text_input.rs  window.rs  workspace.rs
